--- a/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
@@ -68,6 +68,10 @@
                                                     aria-label="Close"></button>
                                         </div>
                                         <input type="text" th:value="${session.bill.id}" class="id" hidden="hidden">
+                                        <div th:if="${!session.checkQuantity}">
+                                            <h4 style="color: black" class="text-center">(*)Rất tiếc,đơn hàng này của bạn không còn sản phẩm có thể trả!</h4>
+                                        </div>
+                                        <div th:if="${session.checkQuantity}">
                                             <h4 style="color: black" class="px-3"> Thông tin trả hàng</h4>
                                             <div class="table-responsive text-nowrap">
                                                 <table class="table table-bordered">
@@ -167,8 +171,9 @@
                                                     </tbody>
                                                 </table>
                                             </div>
+                                        </div>
                                         <div class="mb-3 text-center">
-                                                <button type="submit" th:class="|btn btn-primary completed${session.bill.id}|" onclick="clickSave()" hidden="hidden">Hoàn tất</button>
+                                                <button type="submit" th:class="|btn btn-primary completed${session.bill.id}|" onclick="clickSave()" disabled>Hoàn tất</button>
                                         </div>
                                     </div>
                                 </div>
